Some quick updates

--- a/lib/httpinfo/template.html
+++ b/lib/httpinfo/template.html
@@ -51,45 +51,23 @@ H1, H2, H3, TD, TH, B {font-family: Helvetica}
 <TR BGCOLOR="#ECECEC">
         <TD ALIGN=left><PRE>
 
-<PRE>
 Infotext
-</PRE>
 
-
-        </PRE></TD>
+</PRE></TD>
 </TR>
 </TABLE>
 
 <P>
-<TABLE WIDTH=800 CELLSPACING=0 CELLPADDING=4 BORDER=1 ALIGN=center>
+
+<TABLE WIDTH=800 CELLSPACING=0 CELLPADDING=3 BORDER=1 ALIGN=center>
 <TR BGCOLOR="#CFCFCF">
         <TH ALIGN=left><B>Additional Information</B></TH>
 </TR><TR BGCOLOR="#ECECEC">
         <TD>
         <P>
-
-<P>
-<TABLE CELLPADDING=3 WIDTH=800 CELLSPACING=0 ALIGN=center>
-<TR>
-    <TD ALIGN=left VALIGN=top>
-        </TD>
-        <TD ALIGN=right VALIGN=top>
-
-<!-- end group selection -->
-        </TD>
-</TR>
-</TABLE>
-
-<P>
-<TABLE WIDTH=800 CELLPADDING=3  CELLSPACING=0 ALIGN=center>
-<TR>
-	<TD ALIGN=left VALIGN=top>
-<!-- start commit selection -->
-	
-<!-- end commit selection -->
-	</TD>
-</TR>
-</TABLE>
+<pre>
+INFO
+</pre>
 </TD>
 </TR>
 </TABLE>
