--- a/lib/httpinfo/template.html
+++ b/lib/httpinfo/template.html
@@ -61,7 +61,7 @@ Infotext
 
 <TABLE WIDTH=800 CELLSPACING=0 CELLPADDING=3 BORDER=1 ALIGN=center>
 <TR BGCOLOR="#CFCFCF">
-        <TH ALIGN=left><B>Additional Information</B></TH>
+        <TH ALIGN=left><B>Link Set</B></TH>
 </TR><TR BGCOLOR="#ECECEC">
         <TD>
         <P>
@@ -71,6 +71,85 @@ INFO
 </TD>
 </TR>
 </TABLE>
+
+<P>
+<TABLE WIDTH=800 CELLSPACING=0 CELLPADDING=3 BORDER=1 ALIGN=center>
+<TR BGCOLOR="#CFCFCF">
+        <TH ALIGN=left><B>Neighbor Table</B></TH>
+</TR><TR BGCOLOR="#ECECEC">
+        <TD>
+        <P>
+<pre>
+INFO
+</pre>
+</TD>
+</TR>
+</TABLE>
+
+<P>
+<TABLE WIDTH=800 CELLSPACING=0 CELLPADDING=3 BORDER=1 ALIGN=center>
+<TR BGCOLOR="#CFCFCF">
+        <TH ALIGN=left><B>Topology Table</B></TH>
+</TR><TR BGCOLOR="#ECECEC">
+        <TD>
+        <P>
+<pre>
+INFO
+</pre>
+</TD>
+</TR>
+</TABLE>
+
+
+<P>
+<TABLE WIDTH=800 CELLSPACING=0 CELLPADDING=3 BORDER=1 ALIGN=center>
+<TR BGCOLOR="#CFCFCF">
+<TH ALIGN=left width=50%><B>Remote HNA</B></TH>
+<TH ALIGN=left width=50%><B>Local HNA</B></TH></TR>
+<TR BGCOLOR="#ECECEC">
+<TD>
+<P>
+<pre>
+INFO
+</pre>
+</TD>
+
+<TD>
+<P>
+<pre>
+INFO
+</pre>
+</TD>
+
+</TR>
+
+</TABLE>
+
+
+<P>
+<TABLE WIDTH=800 CELLSPACING=0 CELLPADDING=3 BORDER=1 ALIGN=center>
+<TR BGCOLOR="#CFCFCF">
+<TH ALIGN=left width=50%><B>Registered MID</B></TH>
+<TH ALIGN=left width=50%><B>Local Interfaces</B></TH></TR>
+<TR BGCOLOR="#ECECEC">
+<TD>
+<P>
+<pre>
+INFO
+</pre>
+</TD>
+
+<TD>
+<P>
+<pre>
+INFO
+</pre>
+</TD>
+
+</TR>
+
+</TABLE>
+
 
 <P>
 <TABLE ALIGN=center WIDTH=800><TR><TD ALIGN=left>
