Automatically scroll down to show the most recent messages.

--- a/lib/tas/data/index.html
+++ b/lib/tas/data/index.html
@@ -6,8 +6,9 @@
       OLSR Chat
     </title>
   </head>
-  <frameset rows="80%, 20%">
-    <frame src="chat_recv.lsp" name="Receive">
+  <frameset rows="10%, 70%, 20%">
+    <frame src="chat_head.lsp" name="Head">
+    <frame src="chat_recv.lsp#bottom" name="Receive">
     <frame src="chat_send.lsp" name="Send">
   </frameset>
 </html>
