Added links supplied by Doug.

--- a/README-Link-Quality.html
+++ b/README-Link-Quality.html
@@ -23,7 +23,7 @@
     <H2>olsrd Link Quality Extensions</H2>
 
     <P>
-      $Id: README-Link-Quality.html,v 1.3 2005/02/15 18:22:19 tlopatic Exp $
+      $Id: README-Link-Quality.html,v 1.4 2006/03/30 00:22:02 tlopatic Exp $
     </P>
 
     <H3>Credits</H3>
@@ -162,8 +162,12 @@
     <P>
       The value 1 / (NLQ x LQ) is called the <EM>Expected Transmission
       Count</EM> or <EM>ETX</EM>. For those interested in a more
-      in-depth discussion, there's a scientific paper on it, just
-      goggle for "expected transmission count".
+      in-depth discussion, there's a
+      <a href="http://pdos.csail.mit.edu/papers/grid:mobicom03/">
+      scientific paper</a> by the people who invented all this, and
+      for those who would like to know still more, there's
+      <a href="http://pdos.csail.mit.edu/papers/grid:decouto-phd/thesis.pdf">
+      Doug's PhD</a> thesis.
     </P>
 
     <P>
